syntax = "proto3";
/**
 * @file protos/anymetrica/entity.proto
 * @package anymetrica.entity
 * @fileOverview @description This autogenerated package defines Entity types - core of Anymetrica resource model
 */

package anymetrica.entity;
option java_package = "com.anymetrica.entity";

/**
 * @enum EntityType
 * 
 * Entity type names
 */
enum EntityType {
  EntityUnknown = 0;
  Contact = 23;
  DemoRequestInfo = 5;
  Device = 21;
  File = 6;
  Group = 3;
  Human = 29;
  Location = 27;
  OTP = 32;
  Operation = 9;
  Organization = 11;
  PostalAddress = 1;
  Relation = 4;
  SessionToken = 7;
  TOTP = 18;
  UsernamePassword = 28;
  VadResult = 16;
  Vehicle = 20;
  Waveform = 2;
}

/**
 * @enum EntityTypePlural
 * 
 * Entity plural type names
 */
enum EntityTypePlural {
  EntitiesUnknown = 0;
  Contacts = 23;
  Devices = 21;
  Files = 6;
  Groups = 3;
  Humans = 29;
  Locations = 27;
  OTPs = 32;
  Operations = 9;
  Organizations = 11;
  PostalAddresses = 1;
  SessionTokens = 7;
  TOTPs = 18;
  UsernamePasswords = 28;
  VadResults = 16;
  Vehicles = 20;
  Waveforms = 2;
}
